tooling/nargo_cli/tests/snapshots/execution_failure/hashmap_load_factor/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Load factor is exceeded, consider increasing the capacity.
    ┌─ std/collections/map.nr:620:16
    │
620 │         assert(!exceeded, "Load factor is exceeded, consider increasing the capacity.");
    │                ---------
    │
    = Call stack:
      1. src/main.nr:18:5
      2. src/main.nr:34:5
      3. std/collections/map.nr:514:9
      4. std/collections/map.nr:620:16

Failed assertion
